<resources>
    <string name="app_name">iptv</string>
    <string name="select_head">Select Ts File</string>
    <string name="live">Live</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="waiting">Waiting</string>
    <string name="about_app">About APP</string>
    <string name="check_update">Check Update</string>
    <string name="f_tv">F.TV</string>
    <string name="version">V1.3.0</string>
    <string name="collection">收藏 </string>
    <string name="cancel">Cancel</string>
    <string name="history">Search History</string>
    <string name="hiden">Please input Channal Num</string>
</resources>
