<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_bar_height"
        android:background="@color/head_bar_background"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/about"
        android:textColor="@color/head_text_color"
        android:textSize="@dimen/head_text_size" />

    <ImageView
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_to_top"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/f_tv"
        android:textColor="@color/version_text_color"
        android:textSize="@dimen/f_tv_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@drawable/shap_divider"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/to_left"
                android:layout_weight="1"
                android:autoLink="all"
                android:gravity="center_vertical"
                android:text="@string/about_app"
                android:textColor="@color/about_app_text_color"
                android:textSize="@dimen/about_app_text_size" />

            <TextView
                android:layout_width="@dimen/version_text_width"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/arrow_to_right"
                android:gravity="center_vertical"
                android:text="@string/version"
                android:textColor="@color/version_text_color"
                android:textSize="@dimen/version_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/tv_height"
                android:layout_marginLeft="@dimen/to_left"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/check_update"
                android:textColor="@color/check_update_text_color"
                android:textSize="@dimen/check_update_text_size" />

            <ImageView
                android:layout_width="@dimen/arrow_width"
                android:layout_height="@dimen/arrow_height"
                android:layout_marginRight="@dimen/arrow_to_right"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
