<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_bar_height"
        android:background="@color/head_bar_background"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="@dimen/search_width"
            android:layout_height="@dimen/search_edit_height"
            android:layout_marginLeft="@dimen/search_to_left"
            android:background="@drawable/shape_edit"
            android:hint="@string/hiden"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/img_button_search"
            android:layout_width="@dimen/search_icon_width"
            android:layout_height="@dimen/search_icon_height"
            android:background="@drawable/shape_icon"
            android:padding="6dp"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="@dimen/cancel_button_to_left"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="@dimen/cancel_button_width"
            android:layout_height="@dimen/cancel_button_height"
            android:layout_marginRight="@dimen/cancel_button_to_left"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/cancel_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_history_height"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_search_history"
            android:layout_width="@dimen/search_history_width"
            android:layout_height="@dimen/search_history_height"
            android:layout_marginLeft="@dimen/search_history_to_left"
            android:gravity="center_vertical"
            android:text="@string/history"
            android:textSize="@dimen/search_history_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="@dimen/icon_delete_width"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/history_height"
        android:orientation="horizontal">

    </LinearLayout></LinearLayout>
